hphp/hack/test/typecheck/reactive/mutability_inout2.php.exp
File "mutability_inout2.php", line 6, characters 12-39:
__Mutable, __MaybeMutable and __OwnedMutable annotations are not allowed on inout parameters. (Parsing[1002])
