hphp/hack/test/typecheck/reactive/mutability_inout2.php
<?hh // partial

class A {}

<<__Rx>>
function f(<<__MaybeMutable>> inout A $a): void {
}
